@@ -1,3 +1,5 @@
+HEAD
+	+ Avoid ugly reload error after save changes in Software -> Config
 5.0.1
 	+ Adataptions for commercial edition slides
 5.0
